--- a/tracking/dataoutput/templates/projects.html
+++ b/tracking/dataoutput/templates/projects.html
@@ -10,7 +10,6 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">id</th>
       <th scope="col">Название</th>
       <th scope="col">Адрес</th>
       <th scope="col">Дата начала</th>
@@ -20,11 +19,14 @@
   <tbody>
   {% for project in projects %}
     <tr>
-      <td>{{project.id}}</td>
       <td>{{project.name}}</td>
       <td>{{project.address}}</td>
       <td>{{project.start_date}}</td>
-      <td>{{project.end_date}}</td>
+      {% if project.end_date%}
+        <td>{{project.end_date}}</td>
+      {% else %}
+        <td></td>
+      {% endif %}
     </tr>
   {% endfor %}
   </tbody>
